# goit_web_hw2

./: README.md  pyproject.toml
chatbot-team-project/: README.md
chatbot-team-project/app/: Dockerfile  addressbook.py  notes.py  requirements.txt
